# SpatioCore-Flow

./: .env.example  .gitignore  README.md  agents_tasks.py  cli_header.py  main.py  pyproject.toml  requirements.txt
api/: app.py  models.py  runners.py  state.py
api/routes/: health.py  pipeline.py
logic/: __init__.py  gates.py  orchestrator.py  schemas.py
tests/: test_api.py  test_gates.py  test_orchestrator.py  test_schemas.py  test_ui.py
ui/: api_client.py  app.py  components.py
